--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "A browser firendly .ics/.vcs file generator written entirely in javascript",
   "main": "ics.js",
   "dependencies": {
-    "bower": "^1.8.4",
-    "file-saver": "^1.3.3",
+    "napa": "^3.0.0",
+    "file-saver": "^2.0.0",
     "grunt": "~0.4.2",
+    "grunt-cli": "^1.3.2",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-jshint": "~0.7.2",
     "grunt-contrib-uglify": "~0.2.7",
@@ -14,6 +15,7 @@
   },
   "devDependencies": {},
   "scripts": {
+    "postinstall": "napa eligrey/Blob.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
