--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-jshint": "~0.7.2",
     "grunt-contrib-uglify": "~0.2.7",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-mocha": "~0.4.6"
   },
-  "devDependencies": {},
+  "devDependencies": {
+  },
   "scripts": {
-    "postinstall": "napa eligrey/Blob.js",
+    "postinstall": "napa eligrey/Blob.js:blob",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
